@@ -1,5 +1,9 @@
 ##Text encoding: utf-8
 
+2011-08-13  Jean Bréfort  <jean.brefort@normalesup.org>
+	* mozilla-plugin/moz-plugin.c: make the plugin work with most recent
+	firefox.
+
 2011-07-26  Jean Bréfort  <jean.brefort@normalesup.org>
 	* programs/crystal/document.cc: don't allow more than one dialog of each
 	type for a document. Fix a crasher.
